--- a/alam.html
+++ b/alam.html
@@ -10,7 +10,7 @@
       <p class="lead">Indonesia menawarkan ragam lanskap: gunung berapi, danau kawah, hutan hujan, delta sungai, dan garis pantai panjang. Halaman ini merangkum tipe aktivitas alam dan beberapa rute rekomendasi.</p>
 
       <article class="card fade-up">
-        <img src="https://images.unsplash.com/photo-1505765055751-3b6a47d8b172?q=80&w=1600&auto=format&fit=crop" alt="Taman Nasional">
+        <img src="tanjung.jpg" alt="Taman Nasional">
         <div class="card-body">
           <h3>Taman Nasional & Ekowisata</h3>
           <p class="long">
