--- a/booking.html
+++ b/booking.html
@@ -22,8 +22,55 @@
 <input type="number" min="1" value="1" required>
 <button class="btn" type="submit">Pesan</button>
 </form>
-</main>
-<footer class="site-footer"><div class="container">© Explore Indonesia</div></footer>
-<script src="js/script.js"></script>
+</main><footer class="site-footer">
+  <div class="footer-container">
+
+    <div class="footer-column">
+      <h4>Tentang Kami</h4>
+      <ul>
+        <li><a href="tentang.html">Profil</a></li>
+        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="tips.html">Tips Perjalanan</a></li>
+        <li><a href="kontak.html">Hubungi Kami</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h4>Destinasi</h4>
+      <ul>
+        <li><a href="sumatra.html">Sumatra</a></li>
+        <li><a href="jawa.html">Jawa</a></li>
+        <li><a href="kalimantan.html">Kalimantan</a></li>
+        <li><a href="sulawesi.html">Sulawesi</a></li>
+        <li><a href="bali.html">Bali & Nusa Tenggara</a></li>
+        <li><a href="papua.html">Papua</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h4>Jenis Wisata</h4>
+      <ul>
+        <li><a href="alam.html">Wisata Alam</a></li>
+        <li><a href="sejarah.html">Wisata Sejarah</a></li>
+        <li><a href="kuliner.html">Wisata Kuliner</a></li>
+        <li><a href="peta.html">Peta Interaktif</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h4>Ikuti Kami</h4>
+      <div class="footer-social">
+        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-youtube"></i></a>
+      </div>
+    </div>
+
+  <div class="footer-bottom">
+    © 2025 Explore Indonesia. Dibangun dengan semangat cinta budaya Nusantara.
+  </div>
+</footer>
+
 </body>
 </html>
