--- a/galeri.html
+++ b/galeri.html
@@ -9,10 +9,18 @@
       <h1 class="section-title">Galeri Foto</h1>
       <p class="lead">Kumpulan foto dari seluruh wilayah.</p>
       <div class="gallery">
-        <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?q=80&w=1600&auto=format&fit=crop" alt="">
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?q=80&w=1600&auto=format&fit=crop" alt="">
-        <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?q=80&w=1600&auto=format&fit=crop" alt="">
-        <img src="https://images.unsplash.com/photo-1520012218364-1f2b8b2d7a4b?q=80&w=1600&auto=format&fit=crop" alt="">
+        <img src="kecak.jpg" alt="Tari Kecak">
+        <img src="bromo.jpg" alt="Gunung Bromo">
+        <img src="rumah.jpg" alt="Rumah Adat Kalimantan">
+        <img src="makanan papua.jpg" alt="Makanan Khas Papua">
+        <img src="makanan bali.jpg" alt="Makanan Khas Bali">
+        <img src="makanan sumatra.jpg" alt="Makanan Khas Sumatra">
+        <img src="adat papua.jpg" alt="Pakaian Adat Papua">
+        <img src="rumah sulawesi.jpg" alt="Rumah Adat Sulawesi">
+        <img src="tangkuban.jpg" alt="Tangkuban Perahu">
+        <img src="candi.jpg" alt="Candi">
+        <img src="bunga.jpg" alt="Tanaman Khas Kalimantan">
+        <img src="teluk.jpg" alt="Teluk Tomini Togean">
       </div>
     </section>
   </main>
