--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
   <link rel="stylesheet" href="stylecss.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
-<body>
-  <header class="site-header">
-    <div class="container header-row">
-      <a class="logo" href="index.html">Explore Indonesia</a>
+<body class="home">
+  <header class="site-header" id="siteHeader">
+    <div class="container header-flex">
+      <a href="index.html" class="logo">
+        <img src="logooooo.png" alt="Logo Explore Indonesia" class="logo-img">
+        <span>Explore Indonesia</span>
+      </a>
       <nav class="main-nav">
         <a href="index.html">Beranda</a>
         <a href="destinasi.html">Destinasi</a>
         <a href="galeri.html">Galeri</a>
         <a href="tips.html">Tips</a>
         <a href="peta.html">Peta</a>
-        <a href="tentang.html">Tentang</a>
         <a href="kontak.html">Kontak</a>
       </nav>
     </div>
   </header>
+  
 
   <main class="page-main">
 
@@ -109,13 +112,57 @@
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <div class="footer-grid">
-        <div>
-      
-      <div class="copyright">© Explore Indonesia</div>
+    <div class="footer-container">
+  
+      <div class="footer-column">
+        <h4>Tentang Kami</h4>
+        <ul>
+          <li><a href="tentang.html">Profil</a></li>
+          <li><a href="faq.html">FAQ</a></li>
+          <li><a href="tips.html">Tips Perjalanan</a></li>
+          <li><a href="kontak.html">Hubungi Kami</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-column">
+        <h4>Destinasi</h4>
+        <ul>
+          <li><a href="sumatra.html">Sumatra</a></li>
+          <li><a href="jawa.html">Jawa</a></li>
+          <li><a href="kalimantan.html">Kalimantan</a></li>
+          <li><a href="sulawesi.html">Sulawesi</a></li>
+          <li><a href="bali.html">Bali & Nusa Tenggara</a></li>
+          <li><a href="papua.html">Papua</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-column">
+        <h4>Jenis Wisata</h4>
+        <ul>
+          <li><a href="alam.html">Wisata Alam</a></li>
+          <li><a href="sejarah.html">Wisata Sejarah</a></li>
+          <li><a href="kuliner.html">Wisata Kuliner</a></li>
+          <li><a href="peta.html">Peta Interaktif</a></li>
+        </ul>
+      </div>
+  
+      <div class="footer-column">
+        <h4>Ikuti Kami</h4>
+        <div class="footer-social">
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-youtube"></i></a>
+        </div>
+      </div>
+  
+    </div>
+  
+    <div class="footer-bottom">
+      © 2025 Explore Indonesia. Dibangun dengan semangat cinta budaya Nusantara.
     </div>
   </footer>
+  
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="ja/script.js"></script>
