--- a/kuliner.html
+++ b/kuliner.html
@@ -10,11 +10,11 @@
       <p class="lead">Kuliner adalah bagian tak terpisahkan dari pengalaman perjalanan. Berikut ringkasan perjalanan kuliner per wilayah dan rekomendasi khas.</p>
 
       <article class="card fade-up">
-        <img src="https://images.unsplash.com/photo-1541542684-7a70b2d9d5c6?q=80&w=1600&auto=format&fit=crop" alt="Makanan">
+        <img src="makanan.jpg"Makanan">
         <div class="card-body">
           <h3>Rute Kuliner Nusantara</h3>
           <p class="long">
-            Dari rendang (Sumatra Barat), gudeg (Yogyakarta), sampai ikan bakar Manokwari (Papua) — setiap hidangan punya cerita sejarah dan teknik memasak tersendiri. Rekomendasi: cari warung lokal yang ramai — seringkali itu tanda kualitas.
+            Dari rendang (Sumatra Barat), gudeg (Yogyakarta), sampai ikan bakar Manokwari (Papua);setiap hidangan punya cerita sejarah dan teknik memasak tersendiri.
           </p>
         </div>
       </article>
