--- a/sejarah.html
+++ b/sejarah.html
@@ -10,11 +10,11 @@
       <p class="lead">Situs bersejarah dan budaya di Indonesia mencakup candi, keraton, permukiman tradisional, dan situs kolonial. Halaman ini menguraikan beberapa situs utama dan bagaimana menghormati nilai-nilai setempat saat berkunjung.</p>
 
       <article class="card fade-up">
-        <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?q=80&w=1600&auto=format&fit=crop" alt="Candi">
+        <img src="candi.jpg" alt="Candi">
         <div class="card-body">
           <h3>Candi & Situs Kuno</h3>
           <p class="long">
-            Candi Borobudur, Prambanan, dan situs megalitik lainnya menawarkan pembelajaran sejarah yang mendalam — dari kebudayaan klasik Nusantara hingga pengaruh asing. Disarankan menggunakan pemandu lokal untuk konteks historis.
+            Candi Borobudur, Prambanan, dan situs megalitik lainnya menawarkan pembelajaran sejarah yang mendalam, dari kebudayaan klasik Nusantara hingga pengaruh asing. Disarankan menggunakan pemandu lokal untuk konteks historis.
           </p>
         </div>
       </article>
