--- a/booking.html
+++ b/booking.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="id">
-<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Booking / Pesan Tiket</title><link rel="stylesheet" href="stylecss.css"></head>
+<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" type="image/png" href="logooooo.png">
+  <title>Booking / Pesan Tiket</title><link rel="stylesheet" href="stylecss.css"></head>
 <body>
 <header class="site-header"><div class="container"><a class="logo" href="index.html">Explore Indonesia</a><nav class="main-nav"><a href="index.html">Beranda</a></nav></div></header>
 <main class="container">
-<h1>Pesan Tiket / Booking</h1>
-<p>Siap memesan? Pastikan semua data sudah benar! </p>
-<form id="bookingForm">
-<label>Nama Pemesan</label>
-<input required placeholder="Nama lengkap">
-<label>Destinasi</label>
-<select required>
-<option value="">Pilih...</option>
-<option>Sumatra - Danau Toba</option>
-<option>Jawa - Borobudur</option>
-<option>Papua - Raja Ampat</option>
+    <h1>Pesan Tiket / Booking</h1>
+      <p>Siap memesan? Pastikan semua data sudah benar! </p>
+        <form id="bookingForm">
+        <label>Nama Pemesan</label>
+        <input required placeholder="Nama lengkap">
+          <label>Destinasi</label>
+          <select required>
+          <option value="">Pilih...</option>
+          <option>Sumatra - Danau Toba</option>
+          <option>Jawa - Borobudur</option>
+          <option>Papua - Raja Ampat</option>
 </select>
 <label>Tanggal</label>
 <input type="date" required>
