--- a/kalimantan.html
+++ b/kalimantan.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="id">
-<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Kalimantan — Explore Indonesia</title><link rel="stylesheet" href="stylecss.css"></head>
+<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" type="image/png" href="logooooo.png">
+  <title>Kalimantan — Explore Indonesia</title><link rel="stylesheet" href="stylecss.css"></head>
 <body>
 <header class="site-header"><div class="container"><a class="logo" href="index.html">Explore Indonesia</a></div></header>
 <main class="container">
