--- a/kontak.html
+++ b/kontak.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="id">
-<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Kontak — Explore Indonesia</title><link rel="stylesheet" href="stylecss.css"></head>
+<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <link rel="icon" type="image/png" href="logooooo.png">
+  <title>Kontak — Explore Indonesia</title><link rel="stylesheet" href="stylecss.css"></head>
 <body>
   <header class="site-header"><div class="container header-row"><a class="logo" href="index.html">Explore Indonesia</a><nav class="main-nav"><a href="index.html">Beranda</a></nav></div></header>
 
