--- a/destinasi.html
+++ b/destinasi.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="utf-8" /><meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" type="image/png" href="logooooo.png">
   <title>Destinasi — Explore Indonesia</title>
   <link rel="stylesheet" href="stylecss.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
