--- a/tips.html
+++ b/tips.html
@@ -1,7 +1,9 @@
 
 <!doctype html>
 <html lang="id">
-<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Tips Wisata</title><link rel="stylesheet" href="stylecss.css"></head>
+<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" type="image/png" href="logooooo.png">
+  <title>Tips Wisata</title><link rel="stylesheet" href="stylecss.css"></head>
 <body>
 <header class="site-header"><div class="container"><a class="logo" href="index.html">Explore Indonesia</a></div></header>
 <main class="container">
